# logforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alerting_service/: Dockerfile  main.py
common/: models.py  settings.py
common/sql/: init.sql
docs/: architecture-deep-dive.md  architecture.md  faq.md
docs/guides/: alerting.md  docker.md  grafana-integration.md  ingestion.md  kafka-configuration.md  opentelemetry.md  performance-tuning.md  querying.md  retention.md  security.md
ingestion_service/: Dockerfile  main.py  rate_limiter.py  requirements.txt
processor_service/: Dockerfile  main.py  requirements.txt
query_service/: Dockerfile  main.py  requirements.txt
tests/integration/: test_ingestion.py
tests/unit/: test_models.py  test_rate_limiter.py
